<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/calculator_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/basic_thruster_physics"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/thrust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/thrust_n"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/isp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/thrust"
        android:layout_marginTop="99dp"
        android:text="@string/isp_s"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/isp"
        android:layout_marginTop="148dp"
        android:text="@string/power_w"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/propellant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/isp"
        android:layout_marginTop="192dp"
        android:text="@string/propellant_utilization"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/scmass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/isp"
        android:layout_centerVertical="true"
        android:text="@string/s_c_mass_kg"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/burndays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/isp"
        android:layout_marginBottom="197dp"
        android:text="@string/burn_duration_days"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/thrust"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:inputType="numberDecimal" />

</RelativeLayout>