<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rss_cards"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    app:cardElevation="2dp"
    android:padding="5dp"
    app:cardUseCompatPadding="true"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:background="?android:selectableItemBackground"
        android:orientation="horizontal">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_weight=".70"
            android:layout_height="wrap_content"
            android:id="@+id/card_Text"
            android:orientation="vertical"
            android:layout_width="0dp">
            <TextView
                android:id="@+id/card_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/sample_title"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/card_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:gravity="start"
                android:text="@string/sample_description_of_aiaa_article"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </LinearLayout>
        <ImageView
            android:id="@+id/card_image"
            android:layout_weight=".3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="end"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/todo" />
    </LinearLayout>

</android.support.v7.widget.CardView>